# ML_Prefetchers

./: .gitignore
miss_traces/combined/: gc1_delta.csv  tf1_delta.csv
miss_traces/datasets/: gc1_p50g_delta.csv  gc2_p30g_delta.csv  memA_p30g_delta.csv  tf1_p75g_delta.csv  tf2_p75g_delta.csv
miss_traces/delta/: gc1_p30g.txt  gc1_p50g.txt  memA_p30g.txt  memC_1p2g.txt  tf1_p75g.txt  tf2_p75g.txt
miss_traces/graphchi/: gc1_addr.csv  gc2_addr.csv  gc2_delta.csv  gchi1.addr  gchi1.delta  gchi2.addr  gchi2.delta
miss_traces/index_traces/: gc1.delta  gc2.delta  tf1.delta  tf2.delta
miss_traces/raw/: gc1_mtrace_p50GB.txt  gc2_mtrace_p30GB.txt  memA_mtrace_p30GB.txt  memC_mtrace_1p2GB.txt  tf1_mtrace_p75GB.txt  tf2_mtrace_p75GB.txt
miss_traces/src/: collect_trace.py  load.py  process_misses.py  working_sets.py
miss_traces/tensorflow/: tf1_addr.csv  tf2_addr.csv  tf2_delta.csv  tflow1.addr  tflow1.delta  tflow2.addr  tflow2.delta
results/combined/: cEH32_10k_tf1.txt  cEH32_10k_tf2.txt  cEH32_20k_gc1.txt  cEH32_20k_tf1.txt  cEH32_2p5k_gc2.txt  cEH32_2p5k_tf1.txt  cEH32_2p5k_tf2.txt  gc1_comb_weighted_20k.txt  gc2_comb_weighted_20k.txt  tf1_comb_weighted_20k.txt
src/: convert_to_cpp.py  dl_prefetch.py  gen_index_trace.py  group_prefetcher.py  multiset_onehot.py  one_hot_pages_model.py  prefetch_sim.py  replay_test.py
src/cpp/inference_profiling/: CMakeLists.txt  inference_results.ipynb  profile_inference.cpp
src/cpp/train_profiling/: CMakeLists.txt  profile_training.cpp  training_results.ipynb
src/cpp/tutorial/: CMakeLists.txt  main.cpp
(+124 files in other folders)
